--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-OPENAI_API_KEY=
+OPENAI_API_KEY=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
 
 # Retrieve the following from the Pinecone Console.
 
 # Navigate to API Keys under your Project to retrieve the API key and environment
-PINECONE_API_KEY=
-PINECONE_ENVIRONMENT=
+PINECONE_API_KEY=f2d89e50-8250-45a8-9174-7cd54fa22321
+PINECONE_ENVIRONMENT=us-west-2
 
 # Navigate to Indexes under your Project to retrieve the Index name
-PINECONE_INDEX=
+PINECONE_INDEX=csvapex
